<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:weightSum="1"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <Button
        android:id="@+id/buttonAddAndConfig"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:onClick="addButtonPressed"
        android:text="@string/categoryButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/monthButton"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/month"
        android:onClick="monthButtonPressed"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/buttonAddAndConfig"
        app:layout_constraintRight_toLeftOf="@+id/stat2"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/stat2"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="stat2ButtonPressed"
        android:text="@string/stat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="serif"
        android:text="@string/income"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name"
        android:layout_marginStart="50dp" />

    <TextView
        android:id="@+id/expenditure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/expenditure"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/income"
        app:layout_constraintTop_toBottomOf="@+id/income" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@color/colorAccentDarker"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expenditure"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/total"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/expenditure"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <TextView
        android:id="@+id/incomeNr"
        android:layout_width="182dp"
        android:layout_height="29dp"
        android:layout_marginStart="130dp"
        android:ems="10"
        android:textSize="24sp"
        android:layout_marginEnd="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/income"
        app:layout_constraintHorizontal_bias="0.521"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <TextView
        android:id="@+id/expenditureNr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/expenditure"
        app:layout_constraintLeft_toLeftOf="@+id/incomeNr" />

    <TextView
        android:id="@+id/totalNr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/total"
        app:layout_constraintLeft_toLeftOf="@+id/expenditureNr" />

    <EditText
        android:id="@+id/quickAddNr"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/addAmount"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintRight_toLeftOf="@+id/quickAddSpinner"
        app:layout_constraintTop_toTopOf="@+id/quickAdd" />

    <Spinner
        android:id="@+id/quickAddSpinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/quickAddNr" />

    <Button
        android:id="@+id/quickAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        android:text="@string/quickAdd"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddAndConfig"
        app:layout_constraintRight_toLeftOf="@+id/quickAddNr"
        app:layout_constraintTop_toBottomOf="@+id/total"
        app:layout_constraintVertical_bias="0.503"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="quickAdd" />

</android.support.constraint.ConstraintLayout>


